# eq-questionnaire-schemas

./: .gitignore  .pylintrc  Makefile  Pipfile  README.md  docker-compose-schema-validator.yml  pyproject.toml  style_guide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  pull_request.yml  release.yml
schemas/: test_business_schema.json
schemas/business/en/: 073_0001.json  074_0001.json  1_0005.json  1_0102.json  1_0112.json  1_0203.json  1_0205.json  1_0213.json  1_0215.json  2_0001.json  abres_0015.json  abres_0016.json  abres_0017.json  abres_0019.json  abs_1801.json  abs_1802.json  (+136 more)
scripts/: build_schemas.sh  eq_translations_check.py  eq_validator_check.py  extract_translation_templates.py  format_jsonnet.sh  lint_jsonnet.sh  pull_and_run_validator.sh  pull_validator.sh  resolve_suggestions_urls.py  run_lint_python.sh  run_validator.sh  test_schemas.sh  translate_schemas.py  validate_schemas.py  validate_schemas.sh  validate_test_schemas.py
translations/: ccs_household_gb_eng.pot  ccs_household_gb_wls.pot  census_communal_establishment_gb_wls.pot  census_household_gb_nir.pot  census_household_gb_wls.pot  census_individual_gb_nir.pot  census_individual_gb_wls.pot  cris_0001.pot  messages.pot  phm_0001.pot
translations/cy/: ccs_household_gb_wls_cy.po  census_communal_establishment_gb_wls_cy.po  census_household_gb_wls_cy.po  census_individual_gb_wls_cy.po
translations/eo/: census_household_gb_nir_eo.po  census_individual_gb_nir_eo.po
translations/ga/: census_household_gb_nir_ga.po  census_individual_gb_nir_ga.po
(+426 files in other folders)
