[tool.poetry]
name = "eq-questionnaire-schemas"
version = "0.1.0"
description = "Questionnaire Schemas Repository"
authors = ["ONSDigital"]

[tool.poetry.dependencies]
python = "^3.12"
coloredlogs = "*"
eq-translations = {git = "https://github.com/ONSDigital/eq-translations.git", rev = "v4.10.0"}

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pylint = "*"
flake8-quotes = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
